API contracts fixes
