# files-api-sdk/files_api_sdk/models/__init__.py
@@ -1,0 +1,22 @@
+# coding: utf-8
+
+# flake8: noqa
+"""
+    Files API
+
+    ![Maintained by](https://img.shields.io/badge/Maintained%20by-MLOps%20Club-05998B?style=for-the-badge)  | Helpful Links | Notes | | --- | --- | | [Course Homepage](https://mlops-club.org) | | | [Course Student Portal](https://courses.mlops-club.org) | | | [Course Materials Repo](https://github.com/mlops-club/python-on-aws-course.git) | `mlops-club/python-on-aws-course` | | [Course Reference Project Repo](https://github.com/mlops-club/cloud-course-project.git) | `mlops-club/cloud-course-project` | | [FastAPI Documentation](https://fastapi.tiangolo.com/) | | | [Learn to make \"badges\"](https://shields.io/) | Example: <img alt=\"Awesome Badge\" src=\"https://img.shields.io/badge/Awesome-😎-blueviolet?style=for-the-badge\"> | 
+
+    The version of the OpenAPI document: v1
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+# import models into model package
+from files_api_sdk.models.file_metadata import FileMetadata
+from files_api_sdk.models.get_files_response import GetFilesResponse
+from files_api_sdk.models.http_validation_error import HTTPValidationError
+from files_api_sdk.models.put_file_response import PutFileResponse
+from files_api_sdk.models.validation_error import ValidationError
+from files_api_sdk.models.validation_error_loc_inner import ValidationErrorLocInner
