# files-api-sdk/files_api_sdk/models/get_files_response.py
@@ -1,0 +1,86 @@
+# coding: utf-8
+
+"""
+    Files API
+
+    ![Maintained by](https://img.shields.io/badge/Maintained%20by-MLOps%20Club-05998B?style=for-the-badge)  | Helpful Links | Notes | | --- | --- | | [Course Homepage](https://mlops-club.org) | | | [Course Student Portal](https://courses.mlops-club.org) | | | [Course Materials Repo](https://github.com/mlops-club/python-on-aws-course.git) | `mlops-club/python-on-aws-course` | | [Course Reference Project Repo](https://github.com/mlops-club/cloud-course-project.git) | `mlops-club/cloud-course-project` | | [FastAPI Documentation](https://fastapi.tiangolo.com/) | | | [Learn to make \"badges\"](https://shields.io/) | Example: <img alt=\"Awesome Badge\" src=\"https://img.shields.io/badge/Awesome-😎-blueviolet?style=for-the-badge\"> | 
+
+    The version of the OpenAPI document: v1
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+
+from typing import List, Optional
+from pydantic import BaseModel, Field, StrictStr, conlist
+from files_api_sdk.models.file_metadata import FileMetadata
+
+class GetFilesResponse(BaseModel):
+    """
+    Response model for `GET /files`.  # noqa: E501
+    """
+    files: conlist(FileMetadata) = Field(default=..., description="List of files that were added")
+    next_page_token: Optional[StrictStr] = Field(...)
+    __properties = ["files", "next_page_token"]
+
+    class Config:
+        """Pydantic configuration"""
+        allow_population_by_field_name = True
+        validate_assignment = True
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.dict(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> GetFilesResponse:
+        """Create an instance of GetFilesResponse from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self):
+        """Returns the dictionary representation of the model using alias"""
+        _dict = self.dict(by_alias=True,
+                          exclude={
+                          },
+                          exclude_none=True)
+        # override the default output from pydantic by calling `to_dict()` of each item in files (list)
+        _items = []
+        if self.files:
+            for _item in self.files:
+                if _item:
+                    _items.append(_item.to_dict())
+            _dict['files'] = _items
+        # set to None if next_page_token (nullable) is None
+        # and __fields_set__ contains the field
+        if self.next_page_token is None and "next_page_token" in self.__fields_set__:
+            _dict['next_page_token'] = None
+
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: dict) -> GetFilesResponse:
+        """Create an instance of GetFilesResponse from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return GetFilesResponse.parse_obj(obj)
+
+        _obj = GetFilesResponse.parse_obj({
+            "files": [FileMetadata.from_dict(_item) for _item in obj.get("files")] if obj.get("files") is not None else None,
+            "next_page_token": obj.get("next_page_token")
+        })
+        return _obj
+
+
